# multi-agent-prod

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test_service.sh
.github/workflows/: deploy.yml
src/multi_agent/: __init__.py  main.py
src/multi_agent/api/v2/: __init__.py  chat.py  teams.py
src/multi_agent/clients/: __init__.py  llm_client.py  rag_client.py
src/multi_agent/config/: __init__.py
src/multi_agent/models/: __init__.py  chat.py  team.py
src/multi_agent/services/: __init__.py  chat_service.py  team_service.py
